force-app/main/default/objects/purecloud__PureCloud_Contact_List_Request__c/purecloud__PureCloud_Contact_List_Request__c.object-meta.xml
<CustomObject>
    <description>Request to update a contact list in Genesys Cloud</description>
    <label>Genesys Cloud Contact List Request</label>
    <nameField>
        <label>Genesys Cloud Contact List Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Contact List Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>