force-app/main/default/objects/purecloud__PureCloud_Contact_List_Request__c/fields/purecloud__API_Response__c.field-meta.xml
<CustomField>
    <fullName>purecloud__API_Response__c</fullName>
    <label>API Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>