force-app/main/default/objects/purecloud__PureCloud_Contact_List_Request__c/fields/purecloud__PureCloud_Contact_List_ID__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Contact_List_ID__c</fullName>
    <label>Genesys Cloud Contact List ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>