force-app/main/default/objects/purecloud__PureCloud_Contact_List_Request__c/listViews/purecloud__Failed_Contact_List_Requests.listView-meta.xml
<ListView>
    <fullName>purecloud__Failed_Contact_List_Requests</fullName>
    <columns>NAME</columns>
    <columns>purecloud__API_Response__c</columns>
    <columns>purecloud__Salesforce_Campaign_ID__c</columns>
    <columns>purecloud__PureCloud_Contact_List_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>purecloud__Failed_Attempts__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Failed Contact List Requests</label>
</ListView>